--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -5,9 +5,9 @@ spring.datasource.data=classpath*:db/mysql/populateDB.sql
 
 # MySQL config start
 #----------------------------------------------------------------
-spring.datasource.url = jdbc:mysql://${MYSQL_HOST}:3306/${MYSQL_DATABASE}#?useUnicode=true
-spring.datasource.username=${MYSQL_USER}
-spring.datasource.password=${MYSQL_PASSWORD}
+spring.datasource.url = jdbc:mysql://${RDS_ENDPOINT}:3306/petclinic#?useUnicode=true
+spring.datasource.username=${RDS_USERNAME }
+spring.datasource.password=${RDS_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database=MYSQL
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
