--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -1,11 +1,11 @@
 # uncomment for init database (first start)
-spring.datasource.initialization-mode=always
+#spring.datasource.initialization-mode=always
 spring.datasource.schema=classpath*:db/mysql/initDB.sql
 spring.datasource.data=classpath*:db/mysql/populateDB.sql
 
 # MySQL config start
 #----------------------------------------------------------------
-spring.datasource.url = jdbc:mysql://${RDS_ENDPOINT}:3306/petclinic#?useUnicode=true
+spring.datasource.url = jdbc:mysql://${RDS_ENDPOINT}:3306/petclinic?useUnicode=true
 spring.datasource.username=${RDS_USERNAME}
 spring.datasource.password=${RDS_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
