--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,9 +26,9 @@ server.servlet.context-path=/petclinic/
 spring.messages.basename=messages/messages
 
 logging.level.org.springframework=INFO
-#logging.level.org.springframework=DEBUG
+logging.level.org.springframework=DEBUG
 
-#logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # enable the desired authentication type
